--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 @font-face {
  font-family: open-sans-r;
- url("https://netology-code.github.io/html-2-diploma/sources/fonts/OpenSans-Regular.woff");	
+ src: url("https://netology-code.github.io/html-2-diploma/sources/fonts/OpenSans-Regular.woff");	
 	font-weight: 400; 
 	font-style: normal;
 
@@ -14,7 +14,7 @@
 
 @font-face {
  font-family: open-sans-b;
- url("https://netology-code.github.io/html-2-diploma/sources/fonts/OpenSans-Bold.woff");	
+ src: url("https://netology-code.github.io/html-2-diploma/sources/fonts/OpenSans-Bold.woff");	
 	font-weight: 700;
 	font-style: normal;
 
@@ -22,7 +22,6 @@
 body {
     font-family:  open-sans-r, sans-serif; 
 }
-
 .header {
     width: 100%;
     top: 0;
@@ -115,78 +114,90 @@ body {
     text-decoration: underline;
     text-align: center;
 }
-
 .text_trend {
     font-size: 20px;
     margin-top: 60px;
 }
-.trend{
+.trends{
+    display: flex;
     width: 100%;
     margin-top: 30px;
-    display: flex;
-   flex-wrap: wrap;
 }
-.section_trend{ 
+.trend{
+    width: calc((25%-12px)*4);
     display: flex;
-    width: 24.5;
+    align-items: flex-end;
+    position: relative;
+    z-index:0;
 }
-.box {
-    display: flex;
+.trend::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    right:0;
+    bottom:0;
+    left:0;
+    background-color: #000000;
+    opacity: 0.6;
+    z-index:-1;
 }
-.garden {
+.trend:nth-child(n + 1):nth-child(-n + 3) {
+    margin-right: 4px;
+}
+.first{
     background-image: url(../img/trend1.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
     height: 320px;
 }
-.cheese {
+.second{
     background-image: url(../img/trend2.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
-    height: 320px;
-
-} 
-.moutins {
-    background-image: url(../img/trend3.jpg);
-    background-repeat: no-repeat;  
-    background-size: cover;
     height: 320px;
 }
-.limons {
+.third{
+    background-image: url(../img/trend3.jpg);
+    background-repeat: no-repeat;
+    height: 320px;
+}
+.four{
     background-image: url(../img/trend4.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
     height: 320px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.trend_teg{
+    display: flex;
+    list-style: none;
+    padding:0;
+}
+.trend_teg_item{
+    margin-right:20px;
+  }
+.trend_teg_link{
+    font-size: 14px;
+    text-decoration: none;
+    font-family: open-sans-b, sans-serif;
+    text-transform: uppercase;
+    color:#b59f5b;
+}
+.trend_teg_link:hover{
+    text-decoration: underline;
+    text-align: center;
+}
+.trend_link{
+    font-size: 18px;
+    text-decoration: none;
+    color: #eeeeee;
+    font-family: open-sans-b, sans-serif;
+    text-transform: uppercase;
+}
+.trend_link:hover{
+    color:#b59f5b;
+}
+.trend_text{
+    border: solid #b59f5b;
+    padding: 39px 32px;
+    margin: 0px 18px 15px 18px;
+}
 .list {
     display: flex;
     justify-content: space-between;
